page04+05 列表調整完

--- a/src/html/page030.html
+++ b/src/html/page030.html
@@ -320,11 +320,11 @@
 
               <!-- 表格 -->
               <div class="table-responsive">
-                <table class="table align-middle gs-table mb-0">
+                <table class="table align-middle gs-table is-fluid mb-0">
                   <thead>
                     <tr>
                       <th style="width: 18%;">模板名稱</th>
-                      <th>模板標題</th>
+                      <th class="text-start">模板標題</th>
                       <th style="width: 90px;">渠道類型</th>
                       <th style="width: 90px;">狀態</th>
                       <th style="width: 160px;">最後編輯</th>
@@ -335,7 +335,7 @@
                     <!-- row: EDM Active -->
                     <tr data-channel="edm">
                       <td>標準問卷標題</td>
-                      <td class="text-muted">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
+                      <td class="text-muted ps-2 ps-2">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
                       <td><span class="badge badge-chip">EDM</span></td>
                       <td><span class="badge badge-state bg-success">Active</span></td>
                       <td>2024-01-20 14:30 王小琴</td>
@@ -351,7 +351,7 @@
                     <!-- row: SMS Draft -->
                     <tr data-channel="sms">
                       <td>簡訊邀請文案</td>
-                      <td class="text-muted">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
+                      <td class="text-muted ps-2">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
                       <td><span class="badge badge-chip">SMS</span></td>
                       <td><span class="badge badge-state bg-warning text-dark">Draft</span></td>
                       <td>2024-01-20 15:05 王小琴</td>
@@ -367,7 +367,7 @@
                     <!-- row: Line Active -->
                     <tr data-channel="line">
                       <td>Line 推播文案</td>
-                      <td class="text-muted">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
+                      <td class="text-muted ps-2">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
                       <td><span class="badge badge-chip">Line</span></td>
                       <td><span class="badge badge-state bg-success">Active</span></td>
                       <td>2024-01-20 15:30 王小琴</td>
@@ -383,7 +383,7 @@
                     <!-- row: Push Active -->
                     <tr data-channel="push">
                       <td>APP 推播文案</td>
-                      <td class="text-muted">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
+                      <td class="text-muted ps-2">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
                       <td><span class="badge badge-chip">App Push</span></td>
                       <td><span class="badge badge-state bg-success">Active</span></td>
                       <td>2024-01-20 16:20 王小琴</td>
@@ -399,7 +399,7 @@
                     <!-- row: 群組標語 Draft -->
                     <tr data-channel="slogan">
                       <td>群組標語範例</td>
-                      <td class="text-muted">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
+                      <td class="text-muted ps-2">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
                       <td><span class="badge badge-chip">Slogan</span></td>
                       <td><span class="badge badge-state bg-warning text-dark">Draft</span></td>
                       <td>2024-01-20 17:10 王小琴</td>
@@ -411,6 +411,87 @@
                         </div>
                       </td>
                     </tr>
+
+                    <!-- row: EDM Active -->
+                    <tr data-channel="edm">
+                      <td>標準問卷標題</td>
+                      <td class="text-muted ps-2">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
+                      <td><span class="badge badge-chip">EDM</span></td>
+                      <td><span class="badge badge-state bg-success">Active</span></td>
+                      <td>2024-01-20 14:30 王小琴</td>
+                      <td>
+                        <div class="d-flex gap-2">
+                          <a href="page031.html" class="btn btn-icon" data-bs-toggle="tooltip" title="編輯"><i class="bi bi-pencil"></i></a>
+                          <button class="btn btn-icon" data-bs-toggle="tooltip" title="複製"><i class="bi bi-files"></i></button>
+                          <button class="btn btn-red btn-sm js-card-delete" data-bs-toggle="tooltip" title="刪除"><i class="bi bi-trash"></i></button>
+                        </div>
+                      </td>
+                    </tr>
+
+                    <!-- row: SMS Draft -->
+                    <tr data-channel="sms">
+                      <td>簡訊邀請文案</td>
+                      <td class="text-muted ps-2">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
+                      <td><span class="badge badge-chip">SMS</span></td>
+                      <td><span class="badge badge-state bg-warning text-dark">Draft</span></td>
+                      <td>2024-01-20 15:05 王小琴</td>
+                      <td>
+                        <div class="d-flex gap-2">
+                          <a href="page031.html" class="btn btn-icon" data-bs-toggle="tooltip" title="編輯"><i class="bi bi-pencil"></i></a>
+                          <button class="btn btn-icon" data-bs-toggle="tooltip" title="複製"><i class="bi bi-files"></i></button>
+                          <button class="btn btn-red btn-sm js-card-delete" data-bs-toggle="tooltip" title="刪除"><i class="bi bi-trash"></i></button>
+                        </div>
+                      </td>
+                    </tr>
+
+                    <!-- row: Line Active -->
+                    <tr data-channel="line">
+                      <td>Line 推播文案</td>
+                      <td class="text-muted ps-2">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
+                      <td><span class="badge badge-chip">Line</span></td>
+                      <td><span class="badge badge-state bg-success">Active</span></td>
+                      <td>2024-01-20 15:30 王小琴</td>
+                      <td>
+                        <div class="d-flex gap-2">
+                          <a href="page031.html" class="btn btn-icon" data-bs-toggle="tooltip" title="編輯"><i class="bi bi-pencil"></i></a>
+                          <button class="btn btn-icon" data-bs-toggle="tooltip" title="複製"><i class="bi bi-files"></i></button>
+                          <button class="btn btn-red btn-sm js-card-delete" data-bs-toggle="tooltip" title="刪除"><i class="bi bi-trash"></i></button>
+                        </div>
+                      </td>
+                    </tr>
+
+                    <!-- row: Push Active -->
+                    <tr data-channel="push">
+                      <td>APP 推播文案</td>
+                      <td class="text-muted ps-2">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
+                      <td><span class="badge badge-chip">App Push</span></td>
+                      <td><span class="badge badge-state bg-success">Active</span></td>
+                      <td>2024-01-20 16:20 王小琴</td>
+                      <td>
+                        <div class="d-flex gap-2">
+                          <a href="page031.html" class="btn btn-icon" data-bs-toggle="tooltip" title="編輯"><i class="bi bi-pencil"></i></a>
+                          <button class="btn btn-icon" data-bs-toggle="tooltip" title="複製"><i class="bi bi-files"></i></button>
+                          <button class="btn btn-red btn-sm js-card-delete" data-bs-toggle="tooltip" title="刪除"><i class="bi bi-trash"></i></button>
+                        </div>
+                      </td>
+                    </tr>
+
+                    <!-- row: 群組標語 Draft -->
+                    <tr data-channel="slogan">
+                      <td>群組標語範例</td>
+                      <td class="text-muted ps-2">範例說明文字／關聯樣板：<span class="fw-semibold">結果頁樣板#01</span></td>
+                      <td><span class="badge badge-chip">Slogan</span></td>
+                      <td><span class="badge badge-state bg-warning text-dark">Draft</span></td>
+                      <td>2024-01-20 17:10 王小琴</td>
+                      <td>
+                        <div class="d-flex gap-2">
+                          <a href="page031.html" class="btn btn-icon" data-bs-toggle="tooltip" title="編輯"><i class="bi bi-pencil"></i></a>
+                          <button class="btn btn-icon" data-bs-toggle="tooltip" title="複製"><i class="bi bi-files"></i></button>
+                          <button class="btn btn-red btn-sm js-card-delete" data-bs-toggle="tooltip" title="刪除"><i class="bi bi-trash"></i></button>
+                        </div>
+                      </td>
+                    </tr>
+
                   </tbody>
                 </table>
               </div>
