page020.html list 完成

--- a/src/html/page040.html
+++ b/src/html/page040.html
@@ -244,13 +244,13 @@
 
                                 <!-- 列 1 -->
                                 <div class="l3-row">
-                                  <div class="col-chan"><span class="w-50 badge badge-chip">SMS</span></div>
+                                  <div class="col-chan"><span class="w-75 badge badge-chip">SMS</span></div>
                                   <div class="col-desc small text-muted">
                                     <div>已發送(24hrs)：1,000</div>
                                     <div>已驗證：562</div>
                                   </div>
                                   <div class="col-count text-deep-blue fw-semibold">9,500</div>
-                                  <div class="col-result"><span class="badge rounded-pill bg-secondary py-2">無需發送</span></div>
+                                  <div class="col-result"><span class="w-75 badge rounded-pill bg-secondary py-2">無需發送</span></div>
                                   <div class="col-progress pe-3">
                                     <div class="d-flex align-items-center justify-content-between mb-1">
                                       <small class="text-muted">完成：65%</small>
@@ -284,7 +284,7 @@
                                     <div>已驗證：562</div>
                                   </div>
                                   <div class="col-count text-deep-blue fw-semibold">9,500</div>
-                                  <div class="col-result"><span class="w-50 badge rounded-pill bg-success py-2">進行中</span></div>
+                                  <div class="col-result"><span class="w-75 badge rounded-pill bg-success py-2">進行中</span></div>
                                   <div class="col-progress pe-3">
                                     <div class="d-flex align-items-center justify-content-between mb-1">
                                       <small class="text-muted">完成：65%</small>
@@ -333,7 +333,7 @@
                                     <div>已驗證：562</div>
                                   </div>
                                   <div class="col-count text-deep-blue fw-semibold">9,500</div>
-                                  <div class="col-result"><span class="w-50 badge rounded-pill py-2 bg-primary">已完成</span></div>
+                                  <div class="col-result"><span class="w-75 badge rounded-pill py-2 bg-primary">已完成</span></div>
                                   <div class="col-progress pe-3">
                                     <div class="d-flex align-items-center justify-content-between mb-1">
                                       <small class="text-muted">完成：100%</small>
@@ -358,7 +358,7 @@
                                     <div>已驗證：562</div>
                                   </div>
                                   <div class="col-count text-deep-blue fw-semibold">9,500</div>
-                                  <div class="col-result"><span class="w-50 badge rounded-pill py-2 bg-warning">已暫停</span></div>
+                                  <div class="col-result"><span class="w-75 badge rounded-pill py-2 bg-warning">已暫停</span></div>
                                   <div class="col-progress pe-3">
                                     <div class="d-flex align-items-center justify-content-between mb-1">
                                       <small class="text-muted">完成：42%</small>
@@ -407,7 +407,7 @@
                                     <div>已驗證：562</div>
                                   </div>
                                   <div class="col-count text-deep-blue fw-semibold">9,500</div>
-                                  <div class="col-result"><span class="w-50 badge rounded-pill py-2 bg-light-pink text-pink">失敗</span></div>
+                                  <div class="col-result"><span class="w-75 badge rounded-pill py-2 bg-light-pink text-pink">失敗</span></div>
                                   <div class="col-progress pe-3">
                                     <div class="col-end text-start">—</div>
                                   </div>
@@ -427,7 +427,7 @@
                                     <div>已驗證：562</div>
                                   </div>
                                   <div class="col-count text-deep-blue fw-semibold">9,500</div>
-                                  <div class="col-result"><span class="w-50 badge rounded-pill py-2 bg-danger">失敗</span></div>
+                                  <div class="col-result"><span class="w-75 badge rounded-pill py-2 bg-danger">失敗</span></div>
                                   <div class="col-progress pe-3">
                                     <div class="col-end text-start">—</div>
                                   </div>
@@ -447,7 +447,7 @@
                                     <div>已驗證：562</div>
                                   </div>
                                   <div class="col-count text-deep-blue fw-semibold">9,500</div>
-                                  <div class="col-result"><span class="w-50 badge rounded-pill py-2 bg-light text-dark border">等待發送</span></div>
+                                  <div class="col-result"><span class="w-75 badge rounded-pill py-2 bg-light text-dark border">等待發送</span></div>
                                   <div class="col-progress pe-3">
                                     <div class="col-end text-start">—</div>
                                   </div>
